[package]
name = "git-queue"
version = "0.1.0"
edition = "2021"
description = "Manage queues of dependent branches and their numbered pull requests"
license = "MIT"

# Two binaries are built from thin wrappers in src/bin/ around the library's
# `run()`: `git-queue` (so `git queue ...` dispatches to it — git's standard
# subcommand mechanism) and the alias `git-q` (so `git q ...` works too).

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
